# mfm_server

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  diesel.toml  docker-compose.yml.sample  sqlx-data.json
.github/workflows/: checks.yml
migrations/: 20220716193531_create_portfolio_state_table.down.sql  20220716193531_create_portfolio_state_table.up.sql  20220730191313_auth_token.down.sql  20220730191313_auth_token.up.sql  20230121153801_portfolio_state_by_day.down.sql  20230121153801_portfolio_state_by_day.up.sql
migrations/2022-07-02-192207_portfolio_state/: down.sql  up.sql
src/: authentication.rs  lib.rs  main.rs  portfolio_state.rs  schema.rs
src/routes/: mod.rs  portfolio_state.rs
tests/: common.rs  health_check.rs  portfolio_state.rs
