[package]
name = "mfm_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mfm_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serde = "1.0.138"
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
diesel = { version = "1.4.8", features = ["postgres", "numeric", "uuidv07"] }
diesel-citext = "0.3.0"
warp = "0.3.2"
actix-web = "4.1.0"

[dev-dependencies]
reqwest = "0.11.11"
