[package]
name = "mfm_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mfm_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
tracing = { version = "0.1", features = [ "log" ] }
tracing-actix-web = "0.6"
serde = "1.0.138"
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
actix-web = "4.1.0"
sqlx = { version = "0.6.0", default-features = false, features = ["postgres", "runtime-actix-native-tls", "uuid", "macros", "chrono", "migrate", "json", "offline"] }

[dev-dependencies]
reqwest = "0.11.11"
